<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <include layout="@layout/hp_back_layout" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center_horizontal">


            <Button
                android:id="@+id/child_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_child"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />


            <Button
                android:id="@+id/all_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_adult"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="20sp" />

            <Button
                android:id="@+id/view_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_view_list"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="20sp" />

            <Button
                android:id="@+id/view_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_view_detail"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/is_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="当前版本是测试版本"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18dp"
        android:visibility="gone" />
</RelativeLayout>