<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hhmedic.android.hhdoctorvideodemo.activity.MultiVideoAct">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hh_action_bar_height"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/Toolbar"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                style="@style/input_title"
                android:text="@string/hp_tip_edit_user_token" />

            <EditText
                android:id="@+id/edit_user_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hp_tip_edit_user_token"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                style="@style/input_title"
                android:text="@string/hp_tip_edit_user_name" />

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hp_tip_edit_user_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                style="@style/input_title"
                android:text="@string/hp_tip_edit_user_photo" />

            <EditText
                android:id="@+id/edit_user_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hp_tip_edit_user_photo"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/start_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/hp_button_start_multi_video"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>
